<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/greenhoney"
        android:scaleType="centerCrop"/>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:text="@string/resetButton"
        android:layout_marginBottom="@dimen/marginTop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_A"
                android:textSize="@dimen/textsize_team"
                android:layout_marginTop="@dimen/marginTop1"
                android:textStyle="bold"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:paddingBottom="24dp"
                android:text="@string/scoreTeamA"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:onClick="addOneForTeamA"
                android:text="@string/plus1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:onClick="addThreeForTeamA"
                android:text="@string/plus3"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:onClick="minusOneForTeamA"
                android:text="@string/minus1"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@android:color/holo_green_dark" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/team_B"
                android:textSize="@dimen/textsize_team"
                android:textStyle="bold"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/scoreTeamB"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:onClick="addOneForTeamB"
                android:text="@string/plus1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:onClick="addThreeForTeamB"
                android:text="@string/plus3"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:onClick="minusOneForTeamB"
                android:text="@string/minus1"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>